:recycle: Removed unused imports and refectoring user factory